<resources>
    <string name="app_name">OhFresh</string>
    <string name="getStarted">Bắt đầu với Oh! Fresh</string>
    <string name="homepage">Trang chủ</string>
    <string name="category">Danh mục</string>
    <string name="notification">Thông báo</string>
    <string name="account">Tài khoản</string>
    <string name="fruit">Cherry</string>
    <string name="price">17.000</string>
    <string name="unit">KG</string>
    <string name="descript_login">Cập nhật các loại củ quả tươi với Oh Fresh!</string>
    <string name="description">
        Táo Fuji tròn, vỏ đỏ có đường sọc màu. Táo dày thịt, giòn, ngọt với hương vị đặc trưng. Vỏ táo giàu chất xơ và có lợi cho hệ tiêu hóa, hơn nửa lượng vitamin C của táo đều nằm ở vỏ. Táo không chỉ chứa các chất dinh dưỡng cần thiết cho não như đường, vitamin như C, B1, B2, mà còn chứa các khoáng chất như canxi, kali, kẽm...
    </string>
    <string name="helpCenter">Trung tâm trợ giúp</string>
    <string name="welcome"><br>Xin chào <b>Trường Tâm</b>, \n</br><br>Hãy để Oh!Fresh giúp bạn</br></string>
    <string-array name="questions">
        <item>Tôi có thể thay đổi hay hủy đơn hàng được không?</item>
        <item>Làm thế nào để sử dụng mã giảm giá?</item>
        <item>Làm thế nào để hủy đơn hàng đã đặt?</item>
        <item>Làm thế nào để được giao hàng miễn phí?</item>
    </string-array>
    <string name="login_other">Hoặc đăng nhập với</string>
    <string name="miss_pass_title">Quên mật khẩu</string>
    <string name="miss_pass_head">Bạn quên mật khẩu</string>
    <string name="miss_pass_description">Vui lòng nhập địa chỉ email hoặc số điện thoại của bạn để thiết lập lại mật khẩu!</string>
    <string name="miss_pass_button">Gửi mã OTP</string>
    <string name="verify_otp_title">Xác nhận OTP</string>
    <string name="verify_otp_description1">Mã xác nhận OTP đã được gửi đến:</string>
    <string name="verify_otp_description2">Vui lòng nhập mã xác nhận</string>
    <string name="verify_otp_btn">Xác nhận OTP</string>
    <string name="verify_otp_notreceive">Không nhận được tin nhắn?</string>
    <string name="verify_otp_resendotp">Gửi lại mã OTP</string>
    <string name="set_newpass_title">Thiết lập mật khẩu</string>
    <string name="set_newpass_btn">Thay đổi mật khẩu</string>
    <string name="order_title">Đơn hàng</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_title">Thành tiền:</string>
    <string name="total_money">17.000 vnđ</string>
    <string name="btn_re_buy">Mua lại</string>
    <string name="btn_rate">Đánh giá</string>
    <string name="rating_title">Đánh giá sản phẩm</string>
    <string name="rating_content">Hãy chia sẻ cảm nhận của bạn về sản phẩm này nhé!</string>
    <string name="rating_add_photo">Thêm ảnh/ video</string>
    <string name="rating_submit">Gửi đánh giá</string>
    <string name="txt_delivering">Đang giao hàng</string>
    <string name="txt_delivered">Giao hàng thành công</string>
    <string name="txt_cancelled">Đã hủy</string>
    <string name="txt_rank_title">Hạng thành viên</string>
    <string name="txt_rank_card_title">Thành viên</string>
    <string name="txt_rank_suggest">Tích lũy 99 điểm trước 31 tháng 12, 2021 để đạt hạng Bạc</string>
    <string name="txt_score_title">Bạn đang có</string>
    <string name="txt_score">44</string>
    <string name="txt_score_sub">điểm thưởng</string>
    <string name="txt_rank_status">Current</string>
    <string name="txt_member_title">Lợi ích của bạn</string>
    <string name="txt_bef1">Chào mừng bạn đến với Oh Fresh Rewards! Với mỗi đơn đặt hàng, bạn sẽ được tích một số điểm tương ứng. Điểm số càng cao, bạn sẽ có cơ hội nâng hạng và kèm theo đó là những đặc quyền hấp dẫn</string>
    <string name="silver_title">Ưu đãi hạng Bạc</string>
    <string name="silver_prior_booking">Ưu tiên giao hàng</string>
    <string name="silver_score_des">Nhân 2 lần điểm thưởng khi là thành viên hạng Bạc</string>
    <string name="silver_special_month">ƯU ĐÃI HÀNG THÁNG</string>
    <string name="silver_special_month_des">Nhận nhiều ưu đãi hàng tháng như giảm giá mua sắm, tiện ích...</string>
    <string name="introduction">
        <br>1. GIỚI THIỆU\n</br>
    </string>
    <string name="introContent">
        <br>Chào mừng quý khách hàng đến với Oh!Fresh.\n</br>
        <br>\n</br>
        <br>Chúng tôi là Công ty TNHH Công nghệ và Thương Mại Oh!Fresh có địa chỉ trụ sở tại 92-94 Nam Kỳ Khởi Nghĩa, Bến Nghé, Quận 1, Thành phố Hồ Chí Minh, thành lập ứng dụng Thương mại điện tử Oh!Fresh và đã được đăng ký chính thức với Bộ Công Thương Việt Nam.\n</br>
        <br>\n</br>
        <br>Khi quý khách hàng sử dụng của chúng tôi có nghĩa là quý khách đồng ý với các điều khoản này. Ứng dụng có quyền thay đổi, chỉnh sửa, thêm hoặc lược bỏ bất kỳ phần nào trong Điều khoản sử dụng này, vào bất cứ lúc nào. Các thay đổi có hiệu lực ngay khi được đăng trên ứng dụng mà không cần thông báo trước. Và khi quý khách tiếp tục sử dụng ứng dụng, sau khi các thay đổi về Điều khoản này được đăng tải, có nghĩa là quý khách chấp nhận với những thay đổi đó.\n</br>
        <br>\n</br>
        <br>Quý khách hàng vui lòng kiểm tra thường xuyên để cập nhật những thay đổi của chúng tôi.\n</br>
    </string>
    <string name="instruction">
        <br>2. HƯỚNG DẪN SỬ DỤNG ỨNG DỤNG\n</br>
    </string>
    <string name="instructContent">
        <br>Khi sử dụng ứng dụng của chúng tôi, khách hàng phải đảm bảo đủ 18 tuổi, hoặc truy cập dưới sự giám sát của cha mẹ hay người giám hộ hợp pháp. Khách hàng đảm bảo có đầy đủ hành vi dân sự để thực hiện các giao dịch mua bán hàng hóa theo quy định hiện hành của pháp luật Việt Nam.\n</br>
        <br>\n</br>
        <br>Chúng tôi sẽ cấp một tài khoản (Account) sử dụng để khách hàng có thể mua sắm trên ứng dụng Oh!Fresh trong khuôn khổ Điều khoản và Điều kiện sử dụng đã đề ra.\n</br>
        <br>\n</br>
        <br>Quý khách hàng sẽ phải đăng ký tài khoản với thông tin xác thực về bản thân và phải cập nhật nếu có bất kỳ thay đổi nào. Mỗi người truy cập phải có trách nhiệm với mật khẩu, tài khoản và hoạt động của mình trên ứng dụng. Hơn nữa, quý khách hàng phải thông báo cho chúng tôi biết khi tài khoản bị truy cập trái phép. Chúng tôi không chịu bất kỳ trách nhiệm nào, dù trực tiếp hay gián tiếp, đối với những thiệt hại hoặc mất mát gây ra do quý khách không tuân thủ quy định.\n</br>
        <br>\n</br>
        <br>Nghiêm cấm sử dụng bất kỳ phần nào của trang ứng dụng này với mục đích thương mại hoặc nhân danh bất kỳ đối tác thứ ba nào nếu không được chúng tôi cho phép bằng văn bản. Nếu vi phạm bất cứ điều nào trong đây, chúng tôi sẽ hủy tài khoản của khách mà không cần báo trước.\n</br>
        <br>\n</br>
        <br>Trong suốt quá trình đăng ký, quý khách đồng ý nhận email quảng cáo từ ứng dụng. Nếu không muốn tiếp tục nhận mail, quý khách có thể từ chối bằng cách nhấp vào đường link ở dưới cùng trong mọi email quảng cáo.\n</br>
    </string>
    <string name="opinion">
        <br>3. Ý KIẾN KHÁCH HÀNG\n</br>
    </string>
    <string name="opinionContent">
        <br>Tất cả nội dung ứng dụng và ý kiến phê bình của quý khách đều là tài sản của chúng tôi. Nếu chúng tôi phát hiện bất kỳ thông tin giả mạo nào, chúng tôi sẽ khóa tài khoản của quý khách ngay lập tức hoặc áp dụng các biện pháp khác theo quy định của pháp luật Việt Nam.\n</br>
    </string>
    <string name="acceptance">
        <br>4. CHẤP NHẬN ĐƠN HÀNG VÀ GIÁ CẢ\n</br>
    </string>
    <string name="acceptContent">
        <br>Chúng tôi có quyền từ chối hoặc hủy đơn hàng của quý khách vì bất kỳ lý do gì liên quan đến lỗi kỹ thuật, hệ thống một cách khách quan vào bất kỳ lúc nào.\n</br>
        <br>\n</br>
        <br>Ngoài ra, để đảm bảo tính công bằng cho khách hàng là người tiêu dùng cuối cùng của Oh!Fresh, chúng tôi cũng sẽ từ chối các đơn hàng không nhằm mục đích sử dụng cho cá nhân, mua hàng số lượng nhiều hoặc với mục đích mua đi bán lại.\n</br>
        <br>\n</br>
        <br>Chúng tôi cam kết sẽ cung cấp thông tin giá cả chính xác nhất cho người tiêu dùng. Tuy nhiên, đôi lúc vẫn có sai sót xảy ra, ví dụ như trường hợp giá sản phẩm không hiển thị chính xác trên ứng dụng hoặc sai giá, tùy theo từng trường hợp chúng tôi sẽ liên hệ hướng dẫn hoặc thông báo hủy đơn hàng đó cho quý khách. Chúng tôi cũng có quyền từ chối hoặc hủy bỏ bất kỳ đơn hàng nào dù đơn hàng đó đã hay chưa được xác nhận hoặc đã thanh toán.\n</br>
    </string>
    <string name="purpose">
        <br>1. MỤC ĐÍCH VÀ PHẠM VI THU THẬP DỮ LIỆU\n</br>
    </string>
    <string name="purposeContent">
        <br>Việc thu thập dữ liệu chủ yếu trên ứng dụng Oh!Fresh bao gồm: email, điện thoại, tên đăng nhập, mật khẩu đăng nhập, địa chỉ Khách hàng. Đây là các thông tin mà Oh!Fresh cần Khách hàng cung cấp bắt buộc khi đăng ký sử dụng dịch vụ và Oh!Fresh sử dụng nhằm liên hệ xác nhận khi Khách hàng đăng ký sử dụng dịch vụ trên Oh!Fresh, đảm bảo quyền lợi cho Khách hàng.\n</br>
        <br>\n</br>
        <br>Các Khách hàng sẽ tự chịu trách nhiệm về bảo mật và lưu giữ mọi hoạt động sử dụng dịch vụ dưới tên đăng ký, mật khẩu và hộp thư điện tử của mình. Ngoài ra, Khách hàng có trách nhiệm thông báo kịp thời cho Oh!Fresh về những hành vi sử dụng trái phép, lạm dụng, vi phạm bảo mật, lưu giữ tên đăng ký và mật khẩu của bên thứ ba để có biện pháp giải quyết phù hợp.\n</br>
    </string>
    <string name="scope">
        <br>2. PHẠM VI SỬ DỤNG THÔNG TIN\n</br>
    </string>
    <string name="scopeContent">
        <br>Ứng dụng Oh!Fresh sử dụng thông tin Khách hàng cung cấp để:\n</br>
        <br>\n</br>
        <br>- Cung cấp các dịch vụ đến Khách hàng.\n</br>
        <br>\n</br>
        <br>- Gửi các thông báo về các hoạt động trao đổi thông tin giữa Khách hàng và Oh!Fresh.\n</br>
        <br>\n</br>
        <br>- Ngăn ngừa các hoạt động phá hủy tài khoản người dùng của Khách hàng hoặc các hoạt động giả mạo Khách hàng.\n</br>
        <br>\n</br>
        <br>- Liên lạc và giải quyết với khách hàng trong những trường hợp đặc biệt.\n</br>
        <br>\n</br>
        <br>- Không sử dụng thông tin cá nhân của Khách hàng ngoài mục đích xác nhận và liên hệ có liên quan đến giao dịch tại Oh!Fresh.\n</br>
        <br>\n</br>
        <br>- Oh!Fresh có trách nhiệm hợp tác cung cấp thông tin cá nhân Khách hàng khi có yêu cầu từ cơ quan nhà nước có thẩm quyền.\n</br>
    </string>
    <string name="time">
        <br>3. THỜI GIAN LƯU TRỮ THÔNG TIN\n</br>
    </string>
    <string name="timeContent">
        <br>Dữ liệu cá nhân của Khách hàng sẽ được lưu trữ cho đến khi có yêu cầu hủy bỏ hoặc tự Khách hàng đăng nhập và thực hiện hủy bỏ. Còn lại trong mọi trường hợp thông tin cá nhân Khách hàng sẽ được bảo mật trên máy chủ của Oh!Fresh.\n</br>
    </string>
    <string name="contact">
        <br>4. ĐỊA CHỈ CỦA ĐƠN VỊ THU THẬP, QUẢN LÝ THÔNG TIN VÀ HỖ TRỢ KHÁCH HÀNG\n</br>
    </string>
    <string name="contactContent">
        <br>- Công ty cổ phần Công nghệ và Thương Mại Oh!Fresh.\n</br>
        <br>\n</br>
        <br>- Trụ sở chính: 92-94 Nam Kỳ Khởi Nghĩa, Bến Nghé, Quận 1, Thành phố Hồ Chí Minh.\n</br>
        <br>\n</br>
        <br>- Hotline: 012 345 6789\n</br>
        <br>\n</br>
        <br>- Email: infor@ohfresh.com\n</br>
    </string>
    <string name="mean">
        <br>5. PHƯƠNG TIỆN VÀ CÔNG CỤ ĐỂ KHÁCH HÀNG TIẾP CẬN VÀ CHỈNH SỬA DỮ LIỆU CỦA MÌNH\n</br>
    </string>
    <string name="meanContent">
        <br>Khách hàng có quyền tự kiểm tra, cập nhật, điều chỉnh thông tin cá nhân của mình bằng cách đăng nhập vào tài khoản và chỉnh sửa thông tin cá nhân hoặc yêu cầu Foodmap thực hiện việc này.\n</br>
        <br>\n</br>
        <br>Khách hàng có quyền gửi khiếu nại về việc lộ thông tin các nhân cho bên thứ ba đến Ban quản trị của Sàn TMĐT Foodmap.asia. Khi tiếp nhận những phản hồi này, Foodmap.asia sẽ xác nhận lại thông tin, phải có trách nhiệm trả lời lý do và hướng dẫn Khách hàng khôi phục và bảo mật lại thông tin.\n</br>
    </string>
</resources>