<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    android:gravity="center">


    <ImageView
        android:id="@+id/imvThumb"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:paddingTop="10dp"
        android:src="@drawable/img_cherry"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/fruit"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="15sp"
        android:gravity="center"
        android:paddingTop="5dp"
        android:fontFamily="@font/montserrat_regular"
        />
    <TextView
        android:id="@+id/txtUnit"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:backgroundTint="#EFEFF3"
        android:text="@string/unit"
        android:textColor="#B4B4BA"
        android:textSize="15sp"
        android:textStyle="italic"
        android:paddingTop="10dp"
        android:fontFamily="@font/montserrat_semibolditalic"
        android:background="@drawable/unit_background"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"/>

</LinearLayout>